Multiplied Capital Hull and Shield values * 100
Multiplied Capital Shield Recharge rate * 10
Added a Recharge delay for L ships of 2 Minutes
Added a Recharge delay for XL ships of 5 Minutes
Removed all weapon heat and magazines