@@ -5,9 +5,9 @@
   <remove sel="//macros/macro/properties/ammunition" />
   <remove sel="//macros/macro/properties/heat" />
   <remove sel="//macros/macro/properties/bullet/@timediff" />
-  <replace sel="//macros/macro/properties/reload/@rate">3</replace>
+  <replace sel="//macros/macro/properties/reload/@rate">12</replace>
   <replace sel="//macros/macro/properties/damage/@value">518</replace>
-  <replace sel="//macros/macro/properties/bullet/@barrelamount">2</replace>
+  <replace sel="//macros/macro/properties/bullet/@barrelamount">1</replace>
   <replace sel="//macros/macro/properties/bullet/@lifetime">5</replace>
   <replace sel="//macros/macro/properties/bullet/@speed">4977</replace>
 </diff>
